v2.1.0/_sources/lcls-plc-crixs-motion_PLC_CRIX_MOT_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.200.1.1
      -
    * - Target IP address
      - 172.21.140.200
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_CRIX_MOT_pragmas:

Pragmas
-------

Total pragmas found: 194
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.9.1
        lcls-twincat-motion, SLAC, Unset, 4.0.4
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.10.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, Unset, 3.1.33.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.2.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4389024 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 652369816 (8)
        Constants.bLittleEndian, BOOL, 652369672 (8)
        Constants.bSimulationMode, BOOL, 652369808 (8)
        Constants.CompilerVersion, VERSION, 652369744 (64)
        Constants.CompilerVersionNumeric, DWORD, 652369888 (32)
        Constants.nPackMode, UINT, 652369840 (16)
        Constants.nRegisterSize, WORD, 652369824 (16)
        Constants.RuntimeVersion, VERSION, 652369680 (64)
        Constants.RuntimeVersionNumeric, DWORD, 652369856 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4388160 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4388288 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4388320 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4388352 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>217 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181344 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181376 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4181216 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4181312 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4181152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4181184 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4181248 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4181280 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180768 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181472 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181504 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182560 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182496 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182592 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182624 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182656 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182688 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182528 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180592 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180528 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180656 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180368 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180640 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180400 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180480 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180672 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180496 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180512 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180608 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180384 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180576 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180432 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180464 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180544 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180416 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180448 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180624 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180560 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4248256 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4248288 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246992 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4180064 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4180288 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4180304 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4180176 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4180096 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4180160 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4180192 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4180112 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4180128 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4180144 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4180208 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4180224 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4180240 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4180256 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4180272 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4180080 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180336 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180320 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182720 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180696 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180688 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4261216 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4261248 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267520 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267488 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267456 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267552 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183392 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 635565568 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384720 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184984 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384728 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384736 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 635565504 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248864 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386888 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386592 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386464 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4247008 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183376 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248352 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248336 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248368 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248384 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248400 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248704 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248480 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248800 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248576 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248768 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248832 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248416 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248448 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248640 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248544 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248672 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248736 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248608 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248512 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182816 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182880 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182848 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182752 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182912 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182784 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4249216 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248960 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248320 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184992 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184976 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184944 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184960 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4248224 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246656 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246688 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246560 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246528 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246496 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184928 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246720 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246848 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246872 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246864 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246984 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183488 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246976 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182744 (8)
        Global_Variables.PI, LREAL, 4183424 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246912 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246944 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246880 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246752 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4182304 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246784 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246816 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4182048 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4182016 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4248192 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4182080 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246592 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246624 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4182112 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4182176 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4182144 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4182208 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4182272 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4182240 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182728 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182736 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255840 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4256192 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255776 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4256128 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255552 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254704 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4255088 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255712 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4256064 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255584 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255936 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255648 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4256000 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183360 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183344 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4183248 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4183184 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4183200 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4183216 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4183168 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4183232 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4183312 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4183264 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4183296 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183328 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4183280 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 635558496 (6976)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182432 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182336 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182400 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182368 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182464 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4256256 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4179200 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4387296 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 635565632 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 635558208 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387584 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387872 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179488 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179776 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184640 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4388608 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4389056 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4184032 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634589696 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4388544 (32)
        GVL.xOverride, BOOL, 648438104 (8)


GVL_DiagnosticPaddle
^^^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_DiagnosticPaddle.arrDPStates, ST_BFSAssemblyState, 648650848 (864)
        GVL_DiagnosticPaddle.stDPCenter, ST_BFSAssemblyState, 648650176 (96)
        GVL_DiagnosticPaddle.stDPDiode, ST_BFSAssemblyState, 648650368 (96)
        GVL_DiagnosticPaddle.stDPKnife, ST_BFSAssemblyState, 648650752 (96)
        GVL_DiagnosticPaddle.stDPPark, ST_BFSAssemblyState, 648649984 (96)
        GVL_DiagnosticPaddle.stDPPinhole, ST_BFSAssemblyState, 648650272 (96)
        GVL_DiagnosticPaddle.stDPUp, ST_BFSAssemblyState, 648650080 (96)
        GVL_DiagnosticPaddle.stDPXPosCenter, DUT_PositionState, 648606208 (3648)
        GVL_DiagnosticPaddle.stDPXPosKnife, DUT_PositionState, 648609856 (3648)
        GVL_DiagnosticPaddle.stDPXPosPark, DUT_PositionState, 648602560 (3648)
        GVL_DiagnosticPaddle.stDPYag1, ST_BFSAssemblyState, 648650464 (96)
        GVL_DiagnosticPaddle.stDPYag2, ST_BFSAssemblyState, 648650560 (96)
        GVL_DiagnosticPaddle.stDPYag3, ST_BFSAssemblyState, 648650656 (96)
        GVL_DiagnosticPaddle.stDPYPosCenter, DUT_PositionState, 648617152 (3648)
        GVL_DiagnosticPaddle.stDPYPosDiode, DUT_PositionState, 648620800 (3648)
        GVL_DiagnosticPaddle.stDPYPosKnife, DUT_PositionState, 648639040 (3648)
        GVL_DiagnosticPaddle.stDPYPosPark, DUT_PositionState, 648613504 (3648)
        GVL_DiagnosticPaddle.stDPYPosPinhole, DUT_PositionState, 648624448 (3648)
        GVL_DiagnosticPaddle.stDPYPosYAG1, DUT_PositionState, 648628096 (3648)
        GVL_DiagnosticPaddle.stDPYPosYAG2, DUT_PositionState, 648631744 (3648)
        GVL_DiagnosticPaddle.stDPYPosYAG3, DUT_PositionState, 648635392 (3648)
        GVL_DiagnosticPaddle.stDPZPosCenter, DUT_PositionState, 648646336 (3648)
        GVL_DiagnosticPaddle.stDPZPosPark, DUT_PositionState, 648642688 (3648)

.. raw:: html

   </details>
   <br />


GVL_FiberLite
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_FiberLite.bLedOutput1, FB_LED, 648651712 (1408)
        GVL_FiberLite.bLedOutput1.bLedPower, BOOL, 648652480 (8)
        GVL_FiberLite.bLedOutput1.fbSetIllPercent.iRaw, INT, 648652992 (16)
        GVL_FiberLite.bLedOutput1.iIlluminatorINT, INT, 648652496 (16)
        GVL_FiberLite.bLedOutput2, FB_LED, 648653120 (1408)
        GVL_FiberLite.bLedOutput2.bLedPower, BOOL, 648653888 (8)
        GVL_FiberLite.bLedOutput2.fbSetIllPercent.iRaw, INT, 648654400 (16)
        GVL_FiberLite.bLedOutput2.iIlluminatorINT, INT, 648653904 (16)


GVL_Illumination
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Illumination.fbILMXStage, FB_MotionStage, 648665472 (298304)
        GVL_Illumination.fbILMXStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 648667968 (2048)
        GVL_Illumination.fbILMXStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 648666944 (1024)
        GVL_Illumination.fbILMYStage, FB_MotionStage, 648963776 (298304)
        GVL_Illumination.fbILMYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 648966272 (2048)
        GVL_Illumination.fbILMYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 648965248 (1024)
        GVL_Illumination.fbILMZStage, FB_MotionStage, 649262080 (298304)
        GVL_Illumination.fbILMZStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 649264576 (2048)
        GVL_Illumination.fbILMZStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 649263552 (1024)
        GVL_Illumination.stILMXPosPark, DUT_PositionState, 648654528 (3648)
        GVL_Illumination.stILMYPosPark, DUT_PositionState, 648658176 (3648)
        GVL_Illumination.stILMZPosPark, DUT_PositionState, 648661824 (3648)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388896 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81984)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4389392 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4387224 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4389360 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4389344 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4388336 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4391488 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4389408 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4389376 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4389440 (2048)


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter1, FB_Arbiter, 650550976 (474624)
        GVL_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 649560384 (495296)
        GVL_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 649560648 (8)
        GVL_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 650055680 (495296)
        GVL_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 650055944 (8)


GVL_PointDetector
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PointDetector.stPDRotPosPark, DUT_PositionState, 651025600 (3648)
        GVL_PointDetector.stPDYPosPark, DUT_PositionState, 651029248 (3648)


GVL_Questar
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Questar.stQSTXPosPark, DUT_PositionState, 651032896 (3648)
        GVL_Questar.stQSTYPosPark, DUT_PositionState, 651036544 (3648)


GVL_SampleDelivery
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SampleDelivery.stSDSRotPosPark, DUT_PositionState, 651051136 (3648)
        GVL_SampleDelivery.stSDSShroudPosPark, DUT_PositionState, 651054784 (3648)
        GVL_SampleDelivery.stSDSXPosPark, DUT_PositionState, 651040192 (3648)
        GVL_SampleDelivery.stSDSYPosPark, DUT_PositionState, 651043840 (3648)
        GVL_SampleDelivery.stSDSZPosPark, DUT_PositionState, 651047488 (3648)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626268832 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 626252832 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 626220800 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626218752 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626218720 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626220808 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626220816 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4391520 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626220832 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4389384 (8)


Main
^^^^

.. raw:: html

   <details>
       <summary>572 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.M1, DUT_MotionStage, 651058432 (25216)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651059520 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 651058496 (1024)
        Main.M1.bBrakeRelease, BOOL, 651067480 (8)
        Main.M1.bHardwareEnable, BOOL, 651067488 (8)
        Main.M1.bHome, BOOL, 651067472 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 651067464 (8)
        Main.M1.bLimitForwardEnable, BOOL, 651067456 (8)
        Main.M1.nRawEncoderINT, INT, 651067600 (16)
        Main.M1.nRawEncoderUINT, UINT, 651067584 (16)
        Main.M1.nRawEncoderULINT, ULINT, 651067520 (64)
        Main.M10, DUT_MotionStage, 651285376 (25216)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651286464 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 651285440 (1024)
        Main.M10.bBrakeRelease, BOOL, 651294424 (8)
        Main.M10.bHardwareEnable, BOOL, 651294432 (8)
        Main.M10.bHome, BOOL, 651294416 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 651294408 (8)
        Main.M10.bLimitForwardEnable, BOOL, 651294400 (8)
        Main.M10.nRawEncoderINT, INT, 651294544 (16)
        Main.M10.nRawEncoderUINT, UINT, 651294528 (16)
        Main.M10.nRawEncoderULINT, ULINT, 651294464 (64)
        Main.M11, DUT_MotionStage, 651310592 (25216)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651311680 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 651310656 (1024)
        Main.M11.bBrakeRelease, BOOL, 651319640 (8)
        Main.M11.bHardwareEnable, BOOL, 651319648 (8)
        Main.M11.bHome, BOOL, 651319632 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 651319624 (8)
        Main.M11.bLimitForwardEnable, BOOL, 651319616 (8)
        Main.M11.nRawEncoderINT, INT, 651319760 (16)
        Main.M11.nRawEncoderUINT, UINT, 651319744 (16)
        Main.M11.nRawEncoderULINT, ULINT, 651319680 (64)
        Main.M12, DUT_MotionStage, 651335808 (25216)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651336896 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 651335872 (1024)
        Main.M12.bBrakeRelease, BOOL, 651344856 (8)
        Main.M12.bHardwareEnable, BOOL, 651344864 (8)
        Main.M12.bHome, BOOL, 651344848 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 651344840 (8)
        Main.M12.bLimitForwardEnable, BOOL, 651344832 (8)
        Main.M12.nRawEncoderINT, INT, 651344976 (16)
        Main.M12.nRawEncoderUINT, UINT, 651344960 (16)
        Main.M12.nRawEncoderULINT, ULINT, 651344896 (64)
        Main.M13, DUT_MotionStage, 651361024 (25216)
        Main.M13.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651362112 (2048)
        Main.M13.Axis.PlcToNc, PLCTONC_AXIS_REF, 651361088 (1024)
        Main.M13.bBrakeRelease, BOOL, 651370072 (8)
        Main.M13.bHardwareEnable, BOOL, 651370080 (8)
        Main.M13.bHome, BOOL, 651370064 (8)
        Main.M13.bLimitBackwardEnable, BOOL, 651370056 (8)
        Main.M13.bLimitForwardEnable, BOOL, 651370048 (8)
        Main.M13.nRawEncoderINT, INT, 651370192 (16)
        Main.M13.nRawEncoderUINT, UINT, 651370176 (16)
        Main.M13.nRawEncoderULINT, ULINT, 651370112 (64)
        Main.M14, DUT_MotionStage, 651386240 (25216)
        Main.M14.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651387328 (2048)
        Main.M14.Axis.PlcToNc, PLCTONC_AXIS_REF, 651386304 (1024)
        Main.M14.bBrakeRelease, BOOL, 651395288 (8)
        Main.M14.bHardwareEnable, BOOL, 651395296 (8)
        Main.M14.bHome, BOOL, 651395280 (8)
        Main.M14.bLimitBackwardEnable, BOOL, 651395272 (8)
        Main.M14.bLimitForwardEnable, BOOL, 651395264 (8)
        Main.M14.nRawEncoderINT, INT, 651395408 (16)
        Main.M14.nRawEncoderUINT, UINT, 651395392 (16)
        Main.M14.nRawEncoderULINT, ULINT, 651395328 (64)
        Main.M15, DUT_MotionStage, 651411456 (25216)
        Main.M15.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651412544 (2048)
        Main.M15.Axis.PlcToNc, PLCTONC_AXIS_REF, 651411520 (1024)
        Main.M15.bBrakeRelease, BOOL, 651420504 (8)
        Main.M15.bHardwareEnable, BOOL, 651420512 (8)
        Main.M15.bHome, BOOL, 651420496 (8)
        Main.M15.bLimitBackwardEnable, BOOL, 651420488 (8)
        Main.M15.bLimitForwardEnable, BOOL, 651420480 (8)
        Main.M15.nRawEncoderINT, INT, 651420624 (16)
        Main.M15.nRawEncoderUINT, UINT, 651420608 (16)
        Main.M15.nRawEncoderULINT, ULINT, 651420544 (64)
        Main.M16, DUT_MotionStage, 651436672 (25216)
        Main.M16.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651437760 (2048)
        Main.M16.Axis.PlcToNc, PLCTONC_AXIS_REF, 651436736 (1024)
        Main.M16.bBrakeRelease, BOOL, 651445720 (8)
        Main.M16.bHardwareEnable, BOOL, 651445728 (8)
        Main.M16.bHome, BOOL, 651445712 (8)
        Main.M16.bLimitBackwardEnable, BOOL, 651445704 (8)
        Main.M16.bLimitForwardEnable, BOOL, 651445696 (8)
        Main.M16.nRawEncoderINT, INT, 651445840 (16)
        Main.M16.nRawEncoderUINT, UINT, 651445824 (16)
        Main.M16.nRawEncoderULINT, ULINT, 651445760 (64)
        Main.M17, DUT_MotionStage, 651461888 (25216)
        Main.M17.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651462976 (2048)
        Main.M17.Axis.PlcToNc, PLCTONC_AXIS_REF, 651461952 (1024)
        Main.M17.bBrakeRelease, BOOL, 651470936 (8)
        Main.M17.bHardwareEnable, BOOL, 651470944 (8)
        Main.M17.bHome, BOOL, 651470928 (8)
        Main.M17.bLimitBackwardEnable, BOOL, 651470920 (8)
        Main.M17.bLimitForwardEnable, BOOL, 651470912 (8)
        Main.M17.nRawEncoderINT, INT, 651471056 (16)
        Main.M17.nRawEncoderUINT, UINT, 651471040 (16)
        Main.M17.nRawEncoderULINT, ULINT, 651470976 (64)
        Main.M18, DUT_MotionStage, 651487104 (25216)
        Main.M18.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651488192 (2048)
        Main.M18.Axis.PlcToNc, PLCTONC_AXIS_REF, 651487168 (1024)
        Main.M18.bBrakeRelease, BOOL, 651496152 (8)
        Main.M18.bHardwareEnable, BOOL, 651496160 (8)
        Main.M18.bHome, BOOL, 651496144 (8)
        Main.M18.bLimitBackwardEnable, BOOL, 651496136 (8)
        Main.M18.bLimitForwardEnable, BOOL, 651496128 (8)
        Main.M18.nRawEncoderINT, INT, 651496272 (16)
        Main.M18.nRawEncoderUINT, UINT, 651496256 (16)
        Main.M18.nRawEncoderULINT, ULINT, 651496192 (64)
        Main.M19, DUT_MotionStage, 651512320 (25216)
        Main.M19.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651513408 (2048)
        Main.M19.Axis.PlcToNc, PLCTONC_AXIS_REF, 651512384 (1024)
        Main.M19.bBrakeRelease, BOOL, 651521368 (8)
        Main.M19.bHardwareEnable, BOOL, 651521376 (8)
        Main.M19.bHome, BOOL, 651521360 (8)
        Main.M19.bLimitBackwardEnable, BOOL, 651521352 (8)
        Main.M19.bLimitForwardEnable, BOOL, 651521344 (8)
        Main.M19.nRawEncoderINT, INT, 651521488 (16)
        Main.M19.nRawEncoderUINT, UINT, 651521472 (16)
        Main.M19.nRawEncoderULINT, ULINT, 651521408 (64)
        Main.M2, DUT_MotionStage, 651083648 (25216)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651084736 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 651083712 (1024)
        Main.M2.bBrakeRelease, BOOL, 651092696 (8)
        Main.M2.bHardwareEnable, BOOL, 651092704 (8)
        Main.M2.bHome, BOOL, 651092688 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 651092680 (8)
        Main.M2.bLimitForwardEnable, BOOL, 651092672 (8)
        Main.M2.nRawEncoderINT, INT, 651092816 (16)
        Main.M2.nRawEncoderUINT, UINT, 651092800 (16)
        Main.M2.nRawEncoderULINT, ULINT, 651092736 (64)
        Main.M20, DUT_MotionStage, 651537536 (25216)
        Main.M20.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651538624 (2048)
        Main.M20.Axis.PlcToNc, PLCTONC_AXIS_REF, 651537600 (1024)
        Main.M20.bBrakeRelease, BOOL, 651546584 (8)
        Main.M20.bHardwareEnable, BOOL, 651546592 (8)
        Main.M20.bHome, BOOL, 651546576 (8)
        Main.M20.bLimitBackwardEnable, BOOL, 651546568 (8)
        Main.M20.bLimitForwardEnable, BOOL, 651546560 (8)
        Main.M20.nRawEncoderINT, INT, 651546704 (16)
        Main.M20.nRawEncoderUINT, UINT, 651546688 (16)
        Main.M20.nRawEncoderULINT, ULINT, 651546624 (64)
        Main.M22, DUT_MotionStage, 651587968 (25216)
        Main.M22.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651589056 (2048)
        Main.M22.Axis.PlcToNc, PLCTONC_AXIS_REF, 651588032 (1024)
        Main.M22.bBrakeRelease, BOOL, 651597016 (8)
        Main.M22.bHardwareEnable, BOOL, 651597024 (8)
        Main.M22.bHome, BOOL, 651597008 (8)
        Main.M22.bLimitBackwardEnable, BOOL, 651597000 (8)
        Main.M22.bLimitForwardEnable, BOOL, 651596992 (8)
        Main.M22.nRawEncoderINT, INT, 651597136 (16)
        Main.M22.nRawEncoderUINT, UINT, 651597120 (16)
        Main.M22.nRawEncoderULINT, ULINT, 651597056 (64)
        Main.M23, DUT_MotionStage, 651613184 (25216)
        Main.M23.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651614272 (2048)
        Main.M23.Axis.PlcToNc, PLCTONC_AXIS_REF, 651613248 (1024)
        Main.M23.bBrakeRelease, BOOL, 651622232 (8)
        Main.M23.bHardwareEnable, BOOL, 651622240 (8)
        Main.M23.bHome, BOOL, 651622224 (8)
        Main.M23.bLimitBackwardEnable, BOOL, 651622216 (8)
        Main.M23.bLimitForwardEnable, BOOL, 651622208 (8)
        Main.M23.nRawEncoderINT, INT, 651622352 (16)
        Main.M23.nRawEncoderUINT, UINT, 651622336 (16)
        Main.M23.nRawEncoderULINT, ULINT, 651622272 (64)
        Main.M24, DUT_MotionStage, 651638400 (25216)
        Main.M24.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651639488 (2048)
        Main.M24.Axis.PlcToNc, PLCTONC_AXIS_REF, 651638464 (1024)
        Main.M24.bBrakeRelease, BOOL, 651647448 (8)
        Main.M24.bHardwareEnable, BOOL, 651647456 (8)
        Main.M24.bHome, BOOL, 651647440 (8)
        Main.M24.bLimitBackwardEnable, BOOL, 651647432 (8)
        Main.M24.bLimitForwardEnable, BOOL, 651647424 (8)
        Main.M24.nRawEncoderINT, INT, 651647568 (16)
        Main.M24.nRawEncoderUINT, UINT, 651647552 (16)
        Main.M24.nRawEncoderULINT, ULINT, 651647488 (64)
        Main.M25, DUT_MotionStage, 651663616 (25216)
        Main.M25.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651664704 (2048)
        Main.M25.Axis.PlcToNc, PLCTONC_AXIS_REF, 651663680 (1024)
        Main.M25.bBrakeRelease, BOOL, 651672664 (8)
        Main.M25.bHardwareEnable, BOOL, 651672672 (8)
        Main.M25.bHome, BOOL, 651672656 (8)
        Main.M25.bLimitBackwardEnable, BOOL, 651672648 (8)
        Main.M25.bLimitForwardEnable, BOOL, 651672640 (8)
        Main.M25.nRawEncoderINT, INT, 651672784 (16)
        Main.M25.nRawEncoderUINT, UINT, 651672768 (16)
        Main.M25.nRawEncoderULINT, ULINT, 651672704 (64)
        Main.M26, DUT_MotionStage, 651688832 (25216)
        Main.M26.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651689920 (2048)
        Main.M26.Axis.PlcToNc, PLCTONC_AXIS_REF, 651688896 (1024)
        Main.M26.bBrakeRelease, BOOL, 651697880 (8)
        Main.M26.bHardwareEnable, BOOL, 651697888 (8)
        Main.M26.bHome, BOOL, 651697872 (8)
        Main.M26.bLimitBackwardEnable, BOOL, 651697864 (8)
        Main.M26.bLimitForwardEnable, BOOL, 651697856 (8)
        Main.M26.nRawEncoderINT, INT, 651698000 (16)
        Main.M26.nRawEncoderUINT, UINT, 651697984 (16)
        Main.M26.nRawEncoderULINT, ULINT, 651697920 (64)
        Main.M27, DUT_MotionStage, 651714048 (25216)
        Main.M27.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651715136 (2048)
        Main.M27.Axis.PlcToNc, PLCTONC_AXIS_REF, 651714112 (1024)
        Main.M27.bBrakeRelease, BOOL, 651723096 (8)
        Main.M27.bHardwareEnable, BOOL, 651723104 (8)
        Main.M27.bHome, BOOL, 651723088 (8)
        Main.M27.bLimitBackwardEnable, BOOL, 651723080 (8)
        Main.M27.bLimitForwardEnable, BOOL, 651723072 (8)
        Main.M27.nRawEncoderINT, INT, 651723216 (16)
        Main.M27.nRawEncoderUINT, UINT, 651723200 (16)
        Main.M27.nRawEncoderULINT, ULINT, 651723136 (64)
        Main.M28, DUT_MotionStage, 651739264 (25216)
        Main.M28.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651740352 (2048)
        Main.M28.Axis.PlcToNc, PLCTONC_AXIS_REF, 651739328 (1024)
        Main.M28.bBrakeRelease, BOOL, 651748312 (8)
        Main.M28.bHardwareEnable, BOOL, 651748320 (8)
        Main.M28.bHome, BOOL, 651748304 (8)
        Main.M28.bLimitBackwardEnable, BOOL, 651748296 (8)
        Main.M28.bLimitForwardEnable, BOOL, 651748288 (8)
        Main.M28.nRawEncoderINT, INT, 651748432 (16)
        Main.M28.nRawEncoderUINT, UINT, 651748416 (16)
        Main.M28.nRawEncoderULINT, ULINT, 651748352 (64)
        Main.M29, DUT_MotionStage, 651764480 (25216)
        Main.M29.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651765568 (2048)
        Main.M29.Axis.PlcToNc, PLCTONC_AXIS_REF, 651764544 (1024)
        Main.M29.bBrakeRelease, BOOL, 651773528 (8)
        Main.M29.bHardwareEnable, BOOL, 651773536 (8)
        Main.M29.bHome, BOOL, 651773520 (8)
        Main.M29.bLimitBackwardEnable, BOOL, 651773512 (8)
        Main.M29.bLimitForwardEnable, BOOL, 651773504 (8)
        Main.M29.nRawEncoderINT, INT, 651773648 (16)
        Main.M29.nRawEncoderUINT, UINT, 651773632 (16)
        Main.M29.nRawEncoderULINT, ULINT, 651773568 (64)
        Main.M3, DUT_MotionStage, 651108864 (25216)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651109952 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 651108928 (1024)
        Main.M3.bBrakeRelease, BOOL, 651117912 (8)
        Main.M3.bHardwareEnable, BOOL, 651117920 (8)
        Main.M3.bHome, BOOL, 651117904 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 651117896 (8)
        Main.M3.bLimitForwardEnable, BOOL, 651117888 (8)
        Main.M3.nRawEncoderINT, INT, 651118032 (16)
        Main.M3.nRawEncoderUINT, UINT, 651118016 (16)
        Main.M3.nRawEncoderULINT, ULINT, 651117952 (64)
        Main.M30, DUT_MotionStage, 651789696 (25216)
        Main.M30.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651790784 (2048)
        Main.M30.Axis.PlcToNc, PLCTONC_AXIS_REF, 651789760 (1024)
        Main.M30.bBrakeRelease, BOOL, 651798744 (8)
        Main.M30.bHardwareEnable, BOOL, 651798752 (8)
        Main.M30.bHome, BOOL, 651798736 (8)
        Main.M30.bLimitBackwardEnable, BOOL, 651798728 (8)
        Main.M30.bLimitForwardEnable, BOOL, 651798720 (8)
        Main.M30.nRawEncoderINT, INT, 651798864 (16)
        Main.M30.nRawEncoderUINT, UINT, 651798848 (16)
        Main.M30.nRawEncoderULINT, ULINT, 651798784 (64)
        Main.M31, DUT_MotionStage, 651814912 (25216)
        Main.M31.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651816000 (2048)
        Main.M31.Axis.PlcToNc, PLCTONC_AXIS_REF, 651814976 (1024)
        Main.M31.bBrakeRelease, BOOL, 651823960 (8)
        Main.M31.bHardwareEnable, BOOL, 651823968 (8)
        Main.M31.bHome, BOOL, 651823952 (8)
        Main.M31.bLimitBackwardEnable, BOOL, 651823944 (8)
        Main.M31.bLimitForwardEnable, BOOL, 651823936 (8)
        Main.M31.nRawEncoderINT, INT, 651824080 (16)
        Main.M31.nRawEncoderUINT, UINT, 651824064 (16)
        Main.M31.nRawEncoderULINT, ULINT, 651824000 (64)
        Main.M32, DUT_MotionStage, 651840128 (25216)
        Main.M32.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651841216 (2048)
        Main.M32.Axis.PlcToNc, PLCTONC_AXIS_REF, 651840192 (1024)
        Main.M32.bBrakeRelease, BOOL, 651849176 (8)
        Main.M32.bHardwareEnable, BOOL, 651849184 (8)
        Main.M32.bHome, BOOL, 651849168 (8)
        Main.M32.bLimitBackwardEnable, BOOL, 651849160 (8)
        Main.M32.bLimitForwardEnable, BOOL, 651849152 (8)
        Main.M32.nRawEncoderINT, INT, 651849296 (16)
        Main.M32.nRawEncoderUINT, UINT, 651849280 (16)
        Main.M32.nRawEncoderULINT, ULINT, 651849216 (64)
        Main.M33, DUT_MotionStage, 651865344 (25216)
        Main.M33.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651866432 (2048)
        Main.M33.Axis.PlcToNc, PLCTONC_AXIS_REF, 651865408 (1024)
        Main.M33.bBrakeRelease, BOOL, 651874392 (8)
        Main.M33.bHardwareEnable, BOOL, 651874400 (8)
        Main.M33.bHome, BOOL, 651874384 (8)
        Main.M33.bLimitBackwardEnable, BOOL, 651874376 (8)
        Main.M33.bLimitForwardEnable, BOOL, 651874368 (8)
        Main.M33.nRawEncoderINT, INT, 651874512 (16)
        Main.M33.nRawEncoderUINT, UINT, 651874496 (16)
        Main.M33.nRawEncoderULINT, ULINT, 651874432 (64)
        Main.M34, DUT_MotionStage, 651890560 (25216)
        Main.M34.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651891648 (2048)
        Main.M34.Axis.PlcToNc, PLCTONC_AXIS_REF, 651890624 (1024)
        Main.M34.bBrakeRelease, BOOL, 651899608 (8)
        Main.M34.bHardwareEnable, BOOL, 651899616 (8)
        Main.M34.bHome, BOOL, 651899600 (8)
        Main.M34.bLimitBackwardEnable, BOOL, 651899592 (8)
        Main.M34.bLimitForwardEnable, BOOL, 651899584 (8)
        Main.M34.nRawEncoderINT, INT, 651899728 (16)
        Main.M34.nRawEncoderUINT, UINT, 651899712 (16)
        Main.M34.nRawEncoderULINT, ULINT, 651899648 (64)
        Main.M35, DUT_MotionStage, 651915776 (25216)
        Main.M35.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651916864 (2048)
        Main.M35.Axis.PlcToNc, PLCTONC_AXIS_REF, 651915840 (1024)
        Main.M35.bBrakeRelease, BOOL, 651924824 (8)
        Main.M35.bHardwareEnable, BOOL, 651924832 (8)
        Main.M35.bHome, BOOL, 651924816 (8)
        Main.M35.bLimitBackwardEnable, BOOL, 651924808 (8)
        Main.M35.bLimitForwardEnable, BOOL, 651924800 (8)
        Main.M35.nRawEncoderINT, INT, 651924944 (16)
        Main.M35.nRawEncoderUINT, UINT, 651924928 (16)
        Main.M35.nRawEncoderULINT, ULINT, 651924864 (64)
        Main.M36, DUT_MotionStage, 651562752 (25216)
        Main.M36.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651563840 (2048)
        Main.M36.Axis.PlcToNc, PLCTONC_AXIS_REF, 651562816 (1024)
        Main.M36.bBrakeRelease, BOOL, 651571800 (8)
        Main.M36.bHardwareEnable, BOOL, 651571808 (8)
        Main.M36.bHome, BOOL, 651571792 (8)
        Main.M36.bLimitBackwardEnable, BOOL, 651571784 (8)
        Main.M36.bLimitForwardEnable, BOOL, 651571776 (8)
        Main.M36.nRawEncoderINT, INT, 651571920 (16)
        Main.M36.nRawEncoderUINT, UINT, 651571904 (16)
        Main.M36.nRawEncoderULINT, ULINT, 651571840 (64)
        Main.M37, DUT_MotionStage, 651940992 (25216)
        Main.M37.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651942080 (2048)
        Main.M37.Axis.PlcToNc, PLCTONC_AXIS_REF, 651941056 (1024)
        Main.M37.bBrakeRelease, BOOL, 651950040 (8)
        Main.M37.bHardwareEnable, BOOL, 651950048 (8)
        Main.M37.bHome, BOOL, 651950032 (8)
        Main.M37.bLimitBackwardEnable, BOOL, 651950024 (8)
        Main.M37.bLimitForwardEnable, BOOL, 651950016 (8)
        Main.M37.nRawEncoderINT, INT, 651950160 (16)
        Main.M37.nRawEncoderUINT, UINT, 651950144 (16)
        Main.M37.nRawEncoderULINT, ULINT, 651950080 (64)
        Main.M38, DUT_MotionStage, 651966208 (25216)
        Main.M38.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651967296 (2048)
        Main.M38.Axis.PlcToNc, PLCTONC_AXIS_REF, 651966272 (1024)
        Main.M38.bBrakeRelease, BOOL, 651975256 (8)
        Main.M38.bHardwareEnable, BOOL, 651975264 (8)
        Main.M38.bHome, BOOL, 651975248 (8)
        Main.M38.bLimitBackwardEnable, BOOL, 651975240 (8)
        Main.M38.bLimitForwardEnable, BOOL, 651975232 (8)
        Main.M38.nRawEncoderINT, INT, 651975376 (16)
        Main.M38.nRawEncoderUINT, UINT, 651975360 (16)
        Main.M38.nRawEncoderULINT, ULINT, 651975296 (64)
        Main.M39, DUT_MotionStage, 651991424 (25216)
        Main.M39.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651992512 (2048)
        Main.M39.Axis.PlcToNc, PLCTONC_AXIS_REF, 651991488 (1024)
        Main.M39.bBrakeRelease, BOOL, 652000472 (8)
        Main.M39.bHardwareEnable, BOOL, 652000480 (8)
        Main.M39.bHome, BOOL, 652000464 (8)
        Main.M39.bLimitBackwardEnable, BOOL, 652000456 (8)
        Main.M39.bLimitForwardEnable, BOOL, 652000448 (8)
        Main.M39.nRawEncoderINT, INT, 652000592 (16)
        Main.M39.nRawEncoderUINT, UINT, 652000576 (16)
        Main.M39.nRawEncoderULINT, ULINT, 652000512 (64)
        Main.M4, DUT_MotionStage, 651134080 (25216)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651135168 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 651134144 (1024)
        Main.M4.bBrakeRelease, BOOL, 651143128 (8)
        Main.M4.bHardwareEnable, BOOL, 651143136 (8)
        Main.M4.bHome, BOOL, 651143120 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 651143112 (8)
        Main.M4.bLimitForwardEnable, BOOL, 651143104 (8)
        Main.M4.nRawEncoderINT, INT, 651143248 (16)
        Main.M4.nRawEncoderUINT, UINT, 651143232 (16)
        Main.M4.nRawEncoderULINT, ULINT, 651143168 (64)
        Main.M40, DUT_MotionStage, 652016640 (25216)
        Main.M40.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652017728 (2048)
        Main.M40.Axis.PlcToNc, PLCTONC_AXIS_REF, 652016704 (1024)
        Main.M40.bBrakeRelease, BOOL, 652025688 (8)
        Main.M40.bHardwareEnable, BOOL, 652025696 (8)
        Main.M40.bHome, BOOL, 652025680 (8)
        Main.M40.bLimitBackwardEnable, BOOL, 652025672 (8)
        Main.M40.bLimitForwardEnable, BOOL, 652025664 (8)
        Main.M40.nRawEncoderINT, INT, 652025808 (16)
        Main.M40.nRawEncoderUINT, UINT, 652025792 (16)
        Main.M40.nRawEncoderULINT, ULINT, 652025728 (64)
        Main.M41, DUT_MotionStage, 652041856 (25216)
        Main.M41.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652042944 (2048)
        Main.M41.Axis.PlcToNc, PLCTONC_AXIS_REF, 652041920 (1024)
        Main.M41.bBrakeRelease, BOOL, 652050904 (8)
        Main.M41.bHardwareEnable, BOOL, 652050912 (8)
        Main.M41.bHome, BOOL, 652050896 (8)
        Main.M41.bLimitBackwardEnable, BOOL, 652050888 (8)
        Main.M41.bLimitForwardEnable, BOOL, 652050880 (8)
        Main.M41.nRawEncoderINT, INT, 652051024 (16)
        Main.M41.nRawEncoderUINT, UINT, 652051008 (16)
        Main.M41.nRawEncoderULINT, ULINT, 652050944 (64)
        Main.M42, DUT_MotionStage, 652067072 (25216)
        Main.M42.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652068160 (2048)
        Main.M42.Axis.PlcToNc, PLCTONC_AXIS_REF, 652067136 (1024)
        Main.M42.bBrakeRelease, BOOL, 652076120 (8)
        Main.M42.bHardwareEnable, BOOL, 652076128 (8)
        Main.M42.bHome, BOOL, 652076112 (8)
        Main.M42.bLimitBackwardEnable, BOOL, 652076104 (8)
        Main.M42.bLimitForwardEnable, BOOL, 652076096 (8)
        Main.M42.nRawEncoderINT, INT, 652076240 (16)
        Main.M42.nRawEncoderUINT, UINT, 652076224 (16)
        Main.M42.nRawEncoderULINT, ULINT, 652076160 (64)
        Main.M43, DUT_MotionStage, 652092288 (25216)
        Main.M43.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652093376 (2048)
        Main.M43.Axis.PlcToNc, PLCTONC_AXIS_REF, 652092352 (1024)
        Main.M43.bBrakeRelease, BOOL, 652101336 (8)
        Main.M43.bHardwareEnable, BOOL, 652101344 (8)
        Main.M43.bHome, BOOL, 652101328 (8)
        Main.M43.bLimitBackwardEnable, BOOL, 652101320 (8)
        Main.M43.bLimitForwardEnable, BOOL, 652101312 (8)
        Main.M43.nRawEncoderINT, INT, 652101456 (16)
        Main.M43.nRawEncoderUINT, UINT, 652101440 (16)
        Main.M43.nRawEncoderULINT, ULINT, 652101376 (64)
        Main.M44, DUT_MotionStage, 652117504 (25216)
        Main.M44.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652118592 (2048)
        Main.M44.Axis.PlcToNc, PLCTONC_AXIS_REF, 652117568 (1024)
        Main.M44.bBrakeRelease, BOOL, 652126552 (8)
        Main.M44.bHardwareEnable, BOOL, 652126560 (8)
        Main.M44.bHome, BOOL, 652126544 (8)
        Main.M44.bLimitBackwardEnable, BOOL, 652126536 (8)
        Main.M44.bLimitForwardEnable, BOOL, 652126528 (8)
        Main.M44.nRawEncoderINT, INT, 652126672 (16)
        Main.M44.nRawEncoderUINT, UINT, 652126656 (16)
        Main.M44.nRawEncoderULINT, ULINT, 652126592 (64)
        Main.M45, DUT_MotionStage, 652142720 (25216)
        Main.M45.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652143808 (2048)
        Main.M45.Axis.PlcToNc, PLCTONC_AXIS_REF, 652142784 (1024)
        Main.M45.bBrakeRelease, BOOL, 652151768 (8)
        Main.M45.bHardwareEnable, BOOL, 652151776 (8)
        Main.M45.bHome, BOOL, 652151760 (8)
        Main.M45.bLimitBackwardEnable, BOOL, 652151752 (8)
        Main.M45.bLimitForwardEnable, BOOL, 652151744 (8)
        Main.M45.nRawEncoderINT, INT, 652151888 (16)
        Main.M45.nRawEncoderUINT, UINT, 652151872 (16)
        Main.M45.nRawEncoderULINT, ULINT, 652151808 (64)
        Main.M46, DUT_MotionStage, 652167936 (25216)
        Main.M46.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652169024 (2048)
        Main.M46.Axis.PlcToNc, PLCTONC_AXIS_REF, 652168000 (1024)
        Main.M46.bBrakeRelease, BOOL, 652176984 (8)
        Main.M46.bHardwareEnable, BOOL, 652176992 (8)
        Main.M46.bHome, BOOL, 652176976 (8)
        Main.M46.bLimitBackwardEnable, BOOL, 652176968 (8)
        Main.M46.bLimitForwardEnable, BOOL, 652176960 (8)
        Main.M46.nRawEncoderINT, INT, 652177104 (16)
        Main.M46.nRawEncoderUINT, UINT, 652177088 (16)
        Main.M46.nRawEncoderULINT, ULINT, 652177024 (64)
        Main.M47, DUT_MotionStage, 652193152 (25216)
        Main.M47.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652194240 (2048)
        Main.M47.Axis.PlcToNc, PLCTONC_AXIS_REF, 652193216 (1024)
        Main.M47.bBrakeRelease, BOOL, 652202200 (8)
        Main.M47.bHardwareEnable, BOOL, 652202208 (8)
        Main.M47.bHome, BOOL, 652202192 (8)
        Main.M47.bLimitBackwardEnable, BOOL, 652202184 (8)
        Main.M47.bLimitForwardEnable, BOOL, 652202176 (8)
        Main.M47.nRawEncoderINT, INT, 652202320 (16)
        Main.M47.nRawEncoderUINT, UINT, 652202304 (16)
        Main.M47.nRawEncoderULINT, ULINT, 652202240 (64)
        Main.M48, DUT_MotionStage, 652218368 (25216)
        Main.M48.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652219456 (2048)
        Main.M48.Axis.PlcToNc, PLCTONC_AXIS_REF, 652218432 (1024)
        Main.M48.bBrakeRelease, BOOL, 652227416 (8)
        Main.M48.bHardwareEnable, BOOL, 652227424 (8)
        Main.M48.bHome, BOOL, 652227408 (8)
        Main.M48.bLimitBackwardEnable, BOOL, 652227400 (8)
        Main.M48.bLimitForwardEnable, BOOL, 652227392 (8)
        Main.M48.nRawEncoderINT, INT, 652227536 (16)
        Main.M48.nRawEncoderUINT, UINT, 652227520 (16)
        Main.M48.nRawEncoderULINT, ULINT, 652227456 (64)
        Main.M49, DUT_MotionStage, 652243584 (25216)
        Main.M49.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652244672 (2048)
        Main.M49.Axis.PlcToNc, PLCTONC_AXIS_REF, 652243648 (1024)
        Main.M49.bBrakeRelease, BOOL, 652252632 (8)
        Main.M49.bHardwareEnable, BOOL, 652252640 (8)
        Main.M49.bHome, BOOL, 652252624 (8)
        Main.M49.bLimitBackwardEnable, BOOL, 652252616 (8)
        Main.M49.bLimitForwardEnable, BOOL, 652252608 (8)
        Main.M49.nRawEncoderINT, INT, 652252752 (16)
        Main.M49.nRawEncoderUINT, UINT, 652252736 (16)
        Main.M49.nRawEncoderULINT, ULINT, 652252672 (64)
        Main.M5, DUT_MotionStage, 651159296 (25216)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651160384 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 651159360 (1024)
        Main.M5.bBrakeRelease, BOOL, 651168344 (8)
        Main.M5.bHardwareEnable, BOOL, 651168352 (8)
        Main.M5.bHome, BOOL, 651168336 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 651168328 (8)
        Main.M5.bLimitForwardEnable, BOOL, 651168320 (8)
        Main.M5.nRawEncoderINT, INT, 651168464 (16)
        Main.M5.nRawEncoderUINT, UINT, 651168448 (16)
        Main.M5.nRawEncoderULINT, ULINT, 651168384 (64)
        Main.M50, DUT_MotionStage, 652268800 (25216)
        Main.M50.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652269888 (2048)
        Main.M50.Axis.PlcToNc, PLCTONC_AXIS_REF, 652268864 (1024)
        Main.M50.bBrakeRelease, BOOL, 652277848 (8)
        Main.M50.bHardwareEnable, BOOL, 652277856 (8)
        Main.M50.bHome, BOOL, 652277840 (8)
        Main.M50.bLimitBackwardEnable, BOOL, 652277832 (8)
        Main.M50.bLimitForwardEnable, BOOL, 652277824 (8)
        Main.M50.nRawEncoderINT, INT, 652277968 (16)
        Main.M50.nRawEncoderUINT, UINT, 652277952 (16)
        Main.M50.nRawEncoderULINT, ULINT, 652277888 (64)
        Main.M51, DUT_MotionStage, 652294016 (25216)
        Main.M51.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652295104 (2048)
        Main.M51.Axis.PlcToNc, PLCTONC_AXIS_REF, 652294080 (1024)
        Main.M51.bBrakeRelease, BOOL, 652303064 (8)
        Main.M51.bHardwareEnable, BOOL, 652303072 (8)
        Main.M51.bHome, BOOL, 652303056 (8)
        Main.M51.bLimitBackwardEnable, BOOL, 652303048 (8)
        Main.M51.bLimitForwardEnable, BOOL, 652303040 (8)
        Main.M51.nRawEncoderINT, INT, 652303184 (16)
        Main.M51.nRawEncoderUINT, UINT, 652303168 (16)
        Main.M51.nRawEncoderULINT, ULINT, 652303104 (64)
        Main.M52, DUT_MotionStage, 652319232 (25216)
        Main.M52.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652320320 (2048)
        Main.M52.Axis.PlcToNc, PLCTONC_AXIS_REF, 652319296 (1024)
        Main.M52.bBrakeRelease, BOOL, 652328280 (8)
        Main.M52.bHardwareEnable, BOOL, 652328288 (8)
        Main.M52.bHome, BOOL, 652328272 (8)
        Main.M52.bLimitBackwardEnable, BOOL, 652328264 (8)
        Main.M52.bLimitForwardEnable, BOOL, 652328256 (8)
        Main.M52.nRawEncoderINT, INT, 652328400 (16)
        Main.M52.nRawEncoderUINT, UINT, 652328384 (16)
        Main.M52.nRawEncoderULINT, ULINT, 652328320 (64)
        Main.M53, DUT_MotionStage, 652344448 (25216)
        Main.M53.Axis.NcToPlc, NCTOPLC_AXIS_REF, 652345536 (2048)
        Main.M53.Axis.PlcToNc, PLCTONC_AXIS_REF, 652344512 (1024)
        Main.M53.bBrakeRelease, BOOL, 652353496 (8)
        Main.M53.bHardwareEnable, BOOL, 652353504 (8)
        Main.M53.bHome, BOOL, 652353488 (8)
        Main.M53.bLimitBackwardEnable, BOOL, 652353480 (8)
        Main.M53.bLimitForwardEnable, BOOL, 652353472 (8)
        Main.M53.nRawEncoderINT, INT, 652353616 (16)
        Main.M53.nRawEncoderUINT, UINT, 652353600 (16)
        Main.M53.nRawEncoderULINT, ULINT, 652353536 (64)
        Main.M6, DUT_MotionStage, 651184512 (25216)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651185600 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 651184576 (1024)
        Main.M6.bBrakeRelease, BOOL, 651193560 (8)
        Main.M6.bHardwareEnable, BOOL, 651193568 (8)
        Main.M6.bHome, BOOL, 651193552 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 651193544 (8)
        Main.M6.bLimitForwardEnable, BOOL, 651193536 (8)
        Main.M6.nRawEncoderINT, INT, 651193680 (16)
        Main.M6.nRawEncoderUINT, UINT, 651193664 (16)
        Main.M6.nRawEncoderULINT, ULINT, 651193600 (64)
        Main.M7, DUT_MotionStage, 651209728 (25216)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651210816 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 651209792 (1024)
        Main.M7.bBrakeRelease, BOOL, 651218776 (8)
        Main.M7.bHardwareEnable, BOOL, 651218784 (8)
        Main.M7.bHome, BOOL, 651218768 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 651218760 (8)
        Main.M7.bLimitForwardEnable, BOOL, 651218752 (8)
        Main.M7.nRawEncoderINT, INT, 651218896 (16)
        Main.M7.nRawEncoderUINT, UINT, 651218880 (16)
        Main.M7.nRawEncoderULINT, ULINT, 651218816 (64)
        Main.M8, DUT_MotionStage, 651234944 (25216)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651236032 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 651235008 (1024)
        Main.M8.bBrakeRelease, BOOL, 651243992 (8)
        Main.M8.bHardwareEnable, BOOL, 651244000 (8)
        Main.M8.bHome, BOOL, 651243984 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 651243976 (8)
        Main.M8.bLimitForwardEnable, BOOL, 651243968 (8)
        Main.M8.nRawEncoderINT, INT, 651244112 (16)
        Main.M8.nRawEncoderUINT, UINT, 651244096 (16)
        Main.M8.nRawEncoderULINT, ULINT, 651244032 (64)
        Main.M9, DUT_MotionStage, 651260160 (25216)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 651261248 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 651260224 (1024)
        Main.M9.bBrakeRelease, BOOL, 651269208 (8)
        Main.M9.bHardwareEnable, BOOL, 651269216 (8)
        Main.M9.bHome, BOOL, 651269200 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 651269192 (8)
        Main.M9.bLimitForwardEnable, BOOL, 651269184 (8)
        Main.M9.nRawEncoderINT, INT, 651269328 (16)
        Main.M9.nRawEncoderUINT, UINT, 651269312 (16)
        Main.M9.nRawEncoderULINT, ULINT, 651269248 (64)

.. raw:: html

   </details>
   <br />


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.fbPmpsFileReader, FB_JsonFileToJsonDoc, 634590016 (928512)
        MOTION_GVL.fbStandardPMPSDB, FB_Standard_PMPSDB, 635518528 (27744)
        MOTION_GVL.nMaxStateMotorCount, UINT, 634589984 (16)
        MOTION_GVL.nMaxStates, UINT, 634590000 (16)


MotionConstants
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MotionConstants.MAX_STATE_MOTORS, UINT, 635546272 (16)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4388576 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 635546288 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 635551120 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 635552960 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 635551200 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 635554752 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 635550880 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 635550976 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 635549824 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 635556832 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 635555808 (1024)
        PMPS_GVL.g_cBoundaries, INT, 635554736 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 635554720 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 635551040 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 635551104 (16)
        PMPS_GVL.PERange, PE_Ranges, 635550848 (32)
        PMPS_GVL.reVHyst, REAL, 635555776 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 635551136 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 635548064 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 635546304 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 635551072 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 635550912 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 635557888 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 635557856 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 635557920 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 635557952 (256)


PRG_Beamblock
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Beamblock.fbBEAM_Motor_X, FB_MotionStage, 640681792 (298304)
        PRG_Beamblock.fbBEAM_Motor_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640684288 (2048)
        PRG_Beamblock.fbBEAM_Motor_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640683264 (1024)
        PRG_Beamblock.fbBEAM_Motor_Y, FB_MotionStage, 640980096 (298304)
        PRG_Beamblock.fbBEAM_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640982592 (2048)
        PRG_Beamblock.fbBEAM_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640981568 (1024)
        PRG_Beamblock.fbBEAM_Motor_Z, FB_MotionStage, 641278400 (298304)
        PRG_Beamblock.fbBEAM_Motor_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 641280896 (2048)
        PRG_Beamblock.fbBEAM_Motor_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 641279872 (1024)
        PRG_Beamblock.fbOUTCOUP_Motor_Y, FB_MotionStage, 641576704 (298304)
        PRG_Beamblock.fbOUTCOUP_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 641579200 (2048)
        PRG_Beamblock.fbOUTCOUP_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 641578176 (1024)

.. raw:: html

   </details>
   <br />


PRG_Camera
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Camera.fbCAM_Motor_X, FB_MotionStage, 640085184 (298304)
        PRG_Camera.fbCAM_Motor_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640087680 (2048)
        PRG_Camera.fbCAM_Motor_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640086656 (1024)
        PRG_Camera.fbCAM_Motor_Y, FB_MotionStage, 640383488 (298304)
        PRG_Camera.fbCAM_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 640385984 (2048)
        PRG_Camera.fbCAM_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 640384960 (1024)


PRG_CryoPump
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_CryoPump.bCRYO_VGC_01_CLS, BOOL, 648438040 (8)
        PRG_CryoPump.bCRYO_VGC_01_OPN, BOOL, 648438048 (8)
        PRG_CryoPump.bCRYO_VGC_02_CLS, BOOL, 648438056 (8)
        PRG_CryoPump.bCRYO_VGC_02_OPN, BOOL, 648438064 (8)
        PRG_CryoPump.bEPS_OK_Y_10, BOOL, 647841368 (8)
        PRG_CryoPump.bEPS_OK_Y_11, BOOL, 647841376 (8)
        PRG_CryoPump.bInit, BOOL, 647841384 (8)
        PRG_CryoPump.bLimitBackwardEnable_Y_10, BOOL, 647841392 (8)
        PRG_CryoPump.bLimitBackwardEnable_Y_11, BOOL, 647841400 (8)
        PRG_CryoPump.bMOTY10_IN, BOOL, 648438072 (8)
        PRG_CryoPump.bMOTY10_OUT, BOOL, 648438080 (8)
        PRG_CryoPump.bMOTY11_IN, BOOL, 648438088 (8)
        PRG_CryoPump.bMOTY11_OUT, BOOL, 648438096 (8)
        PRG_CryoPump.fbCryoPump_Motor_Y_10, FB_MotionStage, 647841408 (298304)
        PRG_CryoPump.fbCryoPump_Motor_Y_10.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 647843904 (2048)
        PRG_CryoPump.fbCryoPump_Motor_Y_10.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 647842880 (1024)
        PRG_CryoPump.fbCryoPump_Motor_Y_11, FB_MotionStage, 648139712 (298304)
        PRG_CryoPump.fbCryoPump_Motor_Y_11.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 648142208 (2048)
        PRG_CryoPump.fbCryoPump_Motor_Y_11.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 648141184 (1024)
        PRG_CryoPump.xEcatBridge_External_device_not_connected, BOOL, 648438024 (8)
        PRG_CryoPump.xEcatBridge_TxPDO_state, BOOL, 648438016 (8)
        PRG_CryoPump.xEcatBridge_WcState, BOOL, 648438032 (8)

.. raw:: html

   </details>
   <br />


PRG_CryoStat
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>12 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_CryoStat.fbCRYO_Motor_rY, FB_MotionStage, 638592320 (298304)
        PRG_CryoStat.fbCRYO_Motor_rY.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638594816 (2048)
        PRG_CryoStat.fbCRYO_Motor_rY.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638593792 (1024)
        PRG_CryoStat.fbCRYO_Motor_X, FB_MotionStage, 637697408 (298304)
        PRG_CryoStat.fbCRYO_Motor_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637699904 (2048)
        PRG_CryoStat.fbCRYO_Motor_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637698880 (1024)
        PRG_CryoStat.fbCRYO_Motor_Y, FB_MotionStage, 637995712 (298304)
        PRG_CryoStat.fbCRYO_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637998208 (2048)
        PRG_CryoStat.fbCRYO_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637997184 (1024)
        PRG_CryoStat.fbCRYO_Motor_Z, FB_MotionStage, 638294016 (298304)
        PRG_CryoStat.fbCRYO_Motor_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638296512 (2048)
        PRG_CryoStat.fbCRYO_Motor_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638295488 (1024)

.. raw:: html

   </details>
   <br />


PRG_DiagnosticPaddleMotors
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DiagnosticPaddleMotors.fbDPX_Motor, FB_MotionStage, 635609280 (298304)
        PRG_DiagnosticPaddleMotors.fbDPX_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635611776 (2048)
        PRG_DiagnosticPaddleMotors.fbDPX_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635610752 (1024)
        PRG_DiagnosticPaddleMotors.fbDPY_Motor, FB_MotionStage, 635907584 (298304)
        PRG_DiagnosticPaddleMotors.fbDPY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635910080 (2048)
        PRG_DiagnosticPaddleMotors.fbDPY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635909056 (1024)
        PRG_DiagnosticPaddleMotors.fbDPZ_Motor, FB_MotionStage, 636205888 (298304)
        PRG_DiagnosticPaddleMotors.fbDPZ_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636208384 (2048)
        PRG_DiagnosticPaddleMotors.fbDPZ_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636207360 (1024)


PRG_Illumination
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Illumination.bInit, BOOL, 647841360 (8)
        PRG_Illumination.xMoveOK, BOOL, 647841320 (8)


PRG_InjectorMotors
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>30 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_InjectorMotors.bEPS_OK_SDSZ_18, BOOL, 643664848 (8)
        PRG_InjectorMotors.bHall_Backward, BOOL, 647841312 (8)
        PRG_InjectorMotors.bHall_Forward, BOOL, 647841288 (8)
        PRG_InjectorMotors.bInit, BOOL, 643664856 (8)
        PRG_InjectorMotors.bLimitBackwardEnable_SDSZ_18, BOOL, 643664864 (8)
        PRG_InjectorMotors.bMOTSDSZ18_IN, BOOL, 643664888 (8)
        PRG_InjectorMotors.bMOTSDSZ18_OUT, BOOL, 647841280 (8)
        PRG_InjectorMotors.bSDS_VGC_01_CLS, BOOL, 643664872 (8)
        PRG_InjectorMotors.bSDS_VGC_01_OPN, BOOL, 643664880 (8)
        PRG_InjectorMotors.fbSDSRY_Motor, FB_MotionStage, 646946368 (298304)
        PRG_InjectorMotors.fbSDSRY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646948864 (2048)
        PRG_InjectorMotors.fbSDSRY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646947840 (1024)
        PRG_InjectorMotors.fbSDSShroud_Motor, FB_MotionStage, 647244672 (298304)
        PRG_InjectorMotors.fbSDSShroud_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 647247168 (2048)
        PRG_InjectorMotors.fbSDSShroud_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 647246144 (1024)
        PRG_InjectorMotors.fbSDSX_Motor, FB_MotionStage, 646051456 (298304)
        PRG_InjectorMotors.fbSDSX_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646053952 (2048)
        PRG_InjectorMotors.fbSDSX_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646052928 (1024)
        PRG_InjectorMotors.fbSDSY_Motor, FB_MotionStage, 646349760 (298304)
        PRG_InjectorMotors.fbSDSY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646352256 (2048)
        PRG_InjectorMotors.fbSDSY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646351232 (1024)
        PRG_InjectorMotors.fbSDSZ_Motor, FB_MotionStage, 646648064 (298304)
        PRG_InjectorMotors.fbSDSZ_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646650560 (2048)
        PRG_InjectorMotors.fbSDSZ_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646649536 (1024)
        PRG_InjectorMotors.fbSDSZEncoder, FB_MotionStage, 647542976 (298304)
        PRG_InjectorMotors.fbSDSZEncoder.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 647545472 (2048)
        PRG_InjectorMotors.fbSDSZEncoder.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 647544448 (1024)
        PRG_InjectorMotors.nHall_Backward_Cycles, UINT, 647841328 (16)
        PRG_InjectorMotors.nHall_Forward_Cycles, UINT, 647841296 (16)
        PRG_InjectorMotors.nNumCyclesNeeded, UINT, 647841344 (16)

.. raw:: html

   </details>
   <br />


PRG_Main
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Main.arrStates, ENUM_DiagPaddle, 635608592 (144)
        PRG_Main.bDPaddleOK, BOOL, 635557880 (8)
        PRG_Main.bInit, BOOL, 635557872 (8)
        PRG_Main.DPState, INT, 635608576 (16)


PRG_ObjectivesMotors
^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ObjectivesMotors.fbOBJX_Motor, FB_MotionStage, 641875008 (298304)
        PRG_ObjectivesMotors.fbOBJX_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 641877504 (2048)
        PRG_ObjectivesMotors.fbOBJX_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 641876480 (1024)
        PRG_ObjectivesMotors.fbOBJY_Motor, FB_MotionStage, 642173312 (298304)
        PRG_ObjectivesMotors.fbOBJY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 642175808 (2048)
        PRG_ObjectivesMotors.fbOBJY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 642174784 (1024)
        PRG_ObjectivesMotors.fbOBJZ_Motor, FB_MotionStage, 642471616 (298304)
        PRG_ObjectivesMotors.fbOBJZ_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 642474112 (2048)
        PRG_ObjectivesMotors.fbOBJZ_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 642473088 (1024)


PRG_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 648438720 (138752)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 648439520 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 648441280 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 648443041 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 648443040 (1)
        PRG_PMPS.ff2_ff1_link, FB_FastFault, 648577472 (25088)


PRG_PointDetectorMotors
^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PointDetectorMotors.fbPDETTheta_Motor, FB_MotionStage, 637399104 (298304)
        PRG_PointDetectorMotors.fbPDETTheta_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637401600 (2048)
        PRG_PointDetectorMotors.fbPDETTheta_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637400576 (1024)
        PRG_PointDetectorMotors.fbPDETY_Motor, FB_MotionStage, 637100800 (298304)
        PRG_PointDetectorMotors.fbPDETY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637103296 (2048)
        PRG_PointDetectorMotors.fbPDETY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637102272 (1024)


PRG_QuestarMotors
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_QuestarMotors.fbQSTX_Motor, FB_MotionStage, 636504192 (298304)
        PRG_QuestarMotors.fbQSTX_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636506688 (2048)
        PRG_QuestarMotors.fbQSTX_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636505664 (1024)
        PRG_QuestarMotors.fbQSTY_Motor, FB_MotionStage, 636802496 (298304)
        PRG_QuestarMotors.fbQSTY_Motor.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636804992 (2048)
        PRG_QuestarMotors.fbQSTY_Motor.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636803968 (1024)


PRG_RCC
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RCC.bInit, BOOL, 643664832 (8)
        PRG_RCC.fbRCC_Motor_X, FB_MotionStage, 642769920 (298304)
        PRG_RCC.fbRCC_Motor_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 642772416 (2048)
        PRG_RCC.fbRCC_Motor_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 642771392 (1024)
        PRG_RCC.fbRCC_Motor_Y, FB_MotionStage, 643068224 (298304)
        PRG_RCC.fbRCC_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643070720 (2048)
        PRG_RCC.fbRCC_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643069696 (1024)
        PRG_RCC.fbRCC_Motor_Z, FB_MotionStage, 643366528 (298304)
        PRG_RCC.fbRCC_Motor_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643369024 (2048)
        PRG_RCC.fbRCC_Motor_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643368000 (1024)


PRG_RCI
^^^^^^^

.. raw:: html

   <details>
       <summary>20 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RCI.fbGetMagnetVoltage, FB_RCI_Analog_Input, 640084288 (320)
        PRG_RCI.fbGetMagnetVoltage.iRaw, INT, 640084320 (16)
        PRG_RCI.fbRCI_Motor_rX, FB_MotionStage, 639785856 (298304)
        PRG_RCI.fbRCI_Motor_rX.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639788352 (2048)
        PRG_RCI.fbRCI_Motor_rX.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639787328 (1024)
        PRG_RCI.fbRCI_Motor_X, FB_MotionStage, 638890944 (298304)
        PRG_RCI.fbRCI_Motor_X.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 638893440 (2048)
        PRG_RCI.fbRCI_Motor_X.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 638892416 (1024)
        PRG_RCI.fbRCI_Motor_Y, FB_MotionStage, 639189248 (298304)
        PRG_RCI.fbRCI_Motor_Y.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639191744 (2048)
        PRG_RCI.fbRCI_Motor_Y.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639190720 (1024)
        PRG_RCI.fbRCI_Motor_Z, FB_MotionStage, 639487552 (298304)
        PRG_RCI.fbRCI_Motor_Z.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 639490048 (2048)
        PRG_RCI.fbRCI_Motor_Z.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 639489024 (1024)
        PRG_RCI.fbSetMagnetVoltage, FB_RCI_Analog_Output, 640084608 (576)
        PRG_RCI.fbSetMagnetVoltage.iRaw, INT, 640085056 (16)
        PRG_RCI.fMagnetGet, LREAL, 640084224 (64)
        PRG_RCI.fMagnetSet, LREAL, 640084160 (64)
        PRG_RCI.iMagnetInINT, INT, 635609264 (16)
        PRG_RCI.iMagnetOutINT, INT, 635609248 (16)

.. raw:: html

   </details>
   <br />


PRG_VLS
^^^^^^^

.. raw:: html

   <details>
       <summary>27 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS.bInit, BOOL, 643664840 (8)
        PRG_VLS.fbVLS_CAM_D, FB_MotionStage, 645753024 (298304)
        PRG_VLS.fbVLS_CAM_D.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 645755520 (2048)
        PRG_VLS.fbVLS_CAM_D.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 645754496 (1024)
        PRG_VLS.fbVLS_CAM_P, FB_MotionStage, 645454720 (298304)
        PRG_VLS.fbVLS_CAM_P.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 645457216 (2048)
        PRG_VLS.fbVLS_CAM_P.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 645456192 (1024)
        PRG_VLS.fbVLS_Grating_P, FB_MotionStage, 645156416 (298304)
        PRG_VLS.fbVLS_Grating_P.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 645158912 (2048)
        PRG_VLS.fbVLS_Grating_P.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 645157888 (1024)
        PRG_VLS.fbVLS_Mirror_P, FB_MotionStage, 644858112 (298304)
        PRG_VLS.fbVLS_Mirror_P.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 644860608 (2048)
        PRG_VLS.fbVLS_Mirror_P.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 644859584 (1024)
        PRG_VLS.fbVLS_SLITS_BOTTOM, FB_MotionStage, 643963200 (298304)
        PRG_VLS.fbVLS_SLITS_BOTTOM.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643965696 (2048)
        PRG_VLS.fbVLS_SLITS_BOTTOM.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643964672 (1024)
        PRG_VLS.fbVLS_SLITS_LEFT, FB_MotionStage, 644559808 (298304)
        PRG_VLS.fbVLS_SLITS_LEFT.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 644562304 (2048)
        PRG_VLS.fbVLS_SLITS_LEFT.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 644561280 (1024)
        PRG_VLS.fbVLS_SLITS_RIGHT, FB_MotionStage, 644261504 (298304)
        PRG_VLS.fbVLS_SLITS_RIGHT.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 644264000 (2048)
        PRG_VLS.fbVLS_SLITS_RIGHT.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 644262976 (1024)
        PRG_VLS.fbVLS_SLITS_TOP, FB_MotionStage, 643664896 (298304)
        PRG_VLS.fbVLS_SLITS_TOP.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 643667392 (2048)
        PRG_VLS.fbVLS_SLITS_TOP.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 643666368 (1024)
        PRG_VLS.rGrating_Pitch, LREAL, 646051328 (64)
        PRG_VLS.rMirror_Pitch, LREAL, 646051392 (64)

.. raw:: html

   </details>
   <br />


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 652404736 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 652373056 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 652369920 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 652371968 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 652373024 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 652372992 (32)


